# pavlov-generator

./: Dockerfile  Pipfile  pyproject.toml  wsgi.py
.devcontainer/: Dockerfile
.github/workflows/: continuous-integration.yml  release.yml
pavlov_generator/: __main__.py
