[tool.poetry]
name = "pavlov-generator"
version = "0.1.0"
description = ""
authors = ["nzdjb <github@2a1b.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
